Fix alignment of projects on sponsor page
Was broken by adding centering for partners. Instead only center the
partners.

--- a/css/style.css
+++ b/css/style.css
@@ -54,6 +54,9 @@ section.seperated {
 .row-flex {
   display: flex;
   flex-flow: row wrap;
+}
+
+.row-center {
   align-items: center;
 }
 
